# libusb_matrix_build

./: .gitignore  .pylintrc  LICENSE  Makefile  README.rst  debian_10_sources.list  make_linux_libraries.sh  setup.cfg  test.py
.github/workflows/: build-linux-arm.yml  build-linux-x86_64.yml  build-macos-arm64.yml  build-macos-x86_64.yml
dockerfiles/: Dockerfile_debian_10_armv7l  Dockerfile_manylinux2014_aarch64  Dockerfile_manylinux2014_i686  Dockerfile_manylinux2014_x86_64  Dockerfile_musllinux_1_2_armv7l
libusb_package_tng/: __init__.py
libusb_package_tng/libraries/: libusb-macos-10.13-x86_64-1.0.29.dylib  libusb-macos-10.15-x86_64-1.0.29.dylib  libusb-macos-10.9-x86_64-1.0.29.dylib  libusb-macos-11.0-arm64-1.0.29.dylib  libusb-macos-11.0-x86_64-1.0.29.dylib
