[metadata]
name = libusb_package_tng
version = 1.0.29.1
author = Terry Greeniaus
author_email = terry.greeniaus@gmail.com
description = Library embedding libusb for pyusb.
long_description = Library embedding libusb for pyusb.
long_description_content_type = text/x-rst
keywords = libusb_package libusb_package_tng pyusb
url = https://github.com/tgree/libusb_matrix_build
license = MIT
license_files = LICENSE
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.7
install_requires =
packages =
    libusb_package_tng
    libusb_package_tng.libraries

[options.package_data]
libusb_package_tng =
    *libraries/*
